plugins {
  id 'application'
  id 'org.openjfx.javafxplugin' version '0.1.0' //Plugin que ayuda a construir proyectos JAVAFX
}

repositories {
	mavenCentral()
}

javafx {
    version = "25"
    modules = [ 'javafx.base', 'javafx.swing', 'javafx.graphics', 'javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.web']
}

dependencies {
    //No es necesario incluir las dependencias porque ya lo hace el plugin por nosotros
    implementation 'mysql:mysql-connector-java:8.0.32'
    // https://mvnrepository.com/artifact/org.controlsfx/controlsfx
    implementation("org.controlsfx:controlsfx:11.2.2")
    // https://mvnrepository.com/artifact/de.gsi/chartfx
    // implementation("de.gsi:chartfx:11.2.7")
    // https://mvnrepository.com/artifact/io.fair-acc/chartfx
    implementation("io.fair-acc:chartfx:11.3.1")
    implementation 'net.sf.jasperreports:jasperreports:7.0.1'
    implementation 'net.sf.jasperreports:jasperreports-pdf:7.0.0'
    implementation 'net.sf.jasperreports:jasperreports-charts:7.0.1'
    implementation 'org.openjfx:javafx-web:21.0.1'
}

java { //Se indica la versión de JDK que ha de utilizar
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

application { //Definimos clase principal del proyecto
    mainClass = 'com.javafx.reciWins.start.StartWin.main'
}

sourceSets {
  main {
    resources {
        srcDirs = ["src/main/resources"]
        includes = ["**/*.fxml","**/*.png","**/*.properties", "**/*.css", "**/*.jasper"]  //Importante para poder abrir una extensión no reconocida
    }
  }
}

// CONFIGURACIÓN UTF-8 AÑADIDA AQUÍ
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Test) {
    systemProperty "file.encoding", "UTF-8"
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

run {
    jvmArgs = [
        '--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls'
    ]
}

